--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     // swagger
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
-    // mail code sender
+    // mail
     implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
